# user-story-generator

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
tests/integration/: test_integration_failing.py
tests/unit/domain/: test_service.py
user_story_generator/: __init__.py  main.py
user_story_generator/data/: model.py
user_story_generator/domain/: service.py  types.py
user_story_generator/presentation/: endpoint.py
