[tool.poetry]
name = "user_story_generator"
version = "0.1.0"
description = "Generate nice user stories based on a llm"
authors = ["Daniel Schruhl <danielschruhl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
pytest = "^7.2.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
