[tool.poetry]
name = "user_story_generator"
version = "0.1.0"
description = "Generate nice user stories based on a llm"
authors = ["Daniel Schruhl <danielschruhl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
llama-cpp-python = "^0.2.19"
langchain = "^0.1.11"
flask = "^3.0.0"
gunicorn = "^21.2.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
pytest = "^7.2.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
